--- a/Views/Home/Overview.cshtml
+++ b/Views/Home/Overview.cshtml
@@ -6,6 +6,12 @@
 }
 
 <h1>Overview</h1>
+<h3>Filter</h3>
+<form>
+    @Html.DropDownListFor(m => m.selectedSite, new SelectList(Model.siteList, "Key", "Value"), "-- all sites --")
+    @Html.DropDownListFor(m => m.selectedYear, new SelectList(Model.yearList, "all dates"))
+    <input type="submit" value="Filter" />
+</form>
 
 <table class="ovv" style="border-collapse: collapse; width: 1170px;">
     <tr>
@@ -14,90 +20,103 @@
         </th>
         <th style="width:300px">
             @Html.DisplayNameFor(model => model.uploadSets[0].plotNames)
-        </th>        
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.uploadSets[0].person)
         </th>
         @if (Model.isETCuser)
         {
             <th>Uploader</th>
+        <th>
+    @Html.DisplayNameFor(model => model.uploadSets[0].dateTaken)
+</th>
         }
         <th>
             @Html.DisplayNameFor(model => model.uploadSets[0].uploadTime)
         </th>
+        
         <th>Detail</th>
-        <th >Download Results</th>@*style="width:200px"*@
-        @if (Model.isETCuser) {
-            <th>Quality Check</th> 
+        <th>Download Results</th>
+        @*style="width:200px"*@
+        @if (Model.isETCuser)
+        {
+            <th>Quality Check</th>
+
             <th>Send to ETC</th>
         }
     </tr>
 
-@foreach (var item in Model.uploadSets) {
-    <tr>
-        <td>
-            @if(item.siteID != 0){
-            <h6>@Html.DisplayFor(modelItem => item.siteCode)</h6>
-            }
-            else{
-                <h6>@Html.DisplayFor(modelItem => item.siteName)</h6>
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.plotNames)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.person)
-        </td>
-        @if (Model.isETCuser)
-        {
+    @foreach (var item in Model.uploadSets)
+    {
+        <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.userName)
+                @if (item.siteID != 0)
+                {
+                    <h6>@Html.DisplayFor(modelItem => item.siteCode)</h6>
+                }
+                else
+                {
+                    <h6>@Html.DisplayFor(modelItem => item.siteName)</h6>
+                }
             </td>
-        }
-        <td>
-            @Html.DisplayFor(modelItem => item.uploadTime)
-        </td>
-        <td style="text-align:center">
-            @Html.ActionLink("Detail", "SetDetails", new { setID = item.ID })
-        </td>
-        <td style="text-align:center">
-            @if (item.hasDataLogs)
+            <td>
+                @Html.DisplayFor(modelItem => item.plotNames)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.person)
+            </td>
+            @if (Model.isETCuser)
             {
-                @Html.ActionLink("Download results", "SetDownload", new { setID = item.ID })
+                <td>
+                    @Html.DisplayFor(modelItem => item.userName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.dateTaken)
+                </td>
             }
-        </td>
-        @if (Model.isETCuser)
-        {
             <td>
-                                @if (item.qualityCheck)
-                                {
-                                    <span style="color:gray">
-                                        @Html.DisplayFor(modelItem => item.QCcreated)
-                                    </span>
-                                    <span class="text-highlight">
-                                        @Html.DisplayFor(modelItem => item.QCpass, new { @class = "text-highlight" })
-                                    </span><span class="text-additional">
-                                            @Html.DisplayFor(modelItem => item.QCfail, new { @class = "text-additional" }) 
-                                        </span>
-                                        @Html.ActionLink("View", "UploadSetQualityChecks", new { setID = item.ID })
-                                    <text> </text>
-                                    @Html.ActionLink("Download", "DownloadUploadSetQualityChecks", new { setID = item.ID })
-                                }
-                                else
-                                {
-                                        @Html.ActionLink("Create", "GenerateQualityChecksForUploadSet", new { setID = item.ID })
-                                        }
-                                        @*@Html.DisplayFor(modelItem => item.qualityCheck)*@
-</td>
-            <td>
-                @Html.ActionLink("Submit", "DownloadDataForETC", new { setID = item.ID })<br />
-                @Html.DisplayFor(modelItem => item.lastSubmission.userName)
-                @Html.DisplayFor(modelItem => item.lastSubmission.submissionDate)
+                @Html.DisplayFor(modelItem => item.uploadTime)
             </td>
-        }
-    </tr>
-}
+            <td style="text-align:center">
+                @Html.ActionLink("Detail", "SetDetails", new { setID = item.ID })
+            </td>
+            <td style="text-align:center">
+                @if (item.hasDataLogs)
+                {
+                    @Html.ActionLink("Download results", "SetDownload", new { setID = item.ID })
+                }
+            </td>
+            @if (Model.isETCuser)
+            {
+                <td>
+                    @if (item.qualityCheck)
+                    {
+                        <span style="color:gray">
+                            @Html.DisplayFor(modelItem => item.QCcreated)
+                        </span>
+                        <span class="text-highlight">
+                            @Html.DisplayFor(modelItem => item.QCpass, new { @class = "text-highlight" })
+                        </span><span class="text-additional">
+                            @Html.DisplayFor(modelItem => item.QCfail, new { @class = "text-additional" })
+                        </span>
+                        @Html.ActionLink("View", "UploadSetQualityChecks", new { setID = item.ID })
+                        <text> </text>
+                        @Html.ActionLink("Download", "DownloadUploadSetQualityChecks", new { setID = item.ID })
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Create", "GenerateQualityChecksForUploadSet", new { setID = item.ID })
+                    }
+                    @*@Html.DisplayFor(modelItem => item.qualityCheck)*@
+                </td>
+                <td>
+                    @Html.ActionLink("Submit", "DownloadDataForETC", new { setID = item.ID })<br />
+                    @Html.DisplayFor(modelItem => item.lastSubmission.userName)
+                    @Html.DisplayFor(modelItem => item.lastSubmission.submissionDate)
+                </td>
+            }
+        </tr>
+    }
 </table>
 
 <script>
