--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -17,7 +17,7 @@
     <form>
         <div class="form-group">
                 @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" , @autofocus = "autofocus"})
                 @Html.ValidationMessageFor(m => m.UserName)
             </div>
             <div class="form-group">
