--- a/Views/Dashboard/SensorData.cshtml
+++ b/Views/Dashboard/SensorData.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Collections.Generic.IEnumerable<String>
 
 @{
-    ViewBag.Title = "BE-Bra MeteoSens";
+    //ViewBag.Title = "BE-Bra MeteoSens";
 }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="~/CP/dygraph/dygraph.min.js"></script>
@@ -24,7 +24,7 @@
                         document.getElementById("div-@item"),
 
                         // CSV or path to a CSV file.
-                        "/CP/data/MeteoSens/BE-Bra-MeteoSens-@(item).csv"
+                        "/CP/data/MeteoSens/@(ViewBag.station)-MeteoSens-@(item).csv"
 
                     );
             </script>
