Carbon Portal data: Some improvements + added L2 data for full year

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -6,4 +6,4 @@
 
 <a href="@Url.Action("SensorData",  new { station = "BE-Bra", type="meteosens", days = 5 })" >BE-Bra NRT Meteosens</a><br />
 <a href="@Url.Action("SensorData",  new { station = "BE-Maa", type="meteosens", days = 5 })">BE-Maa NRT Meteosens</a>
-<a href="@Url.Action("generateBraInfoData")">generateBraInfoData</a>
+@*<a href="@Url.Action("generateBraInfoData")">generateBraInfoData</a>*@
