QA: show bin and jpg of previous DHP image

--- a/Views/Home/EditQualityCheck.cshtml
+++ b/Views/Home/EditQualityCheck.cshtml
@@ -41,6 +41,18 @@
                 </div>
             </div>
         }
+        @if (Model.previousQualityCheck != null && Model.previousQualityCheck.image != null && Model.previousQualityCheck.image.jpgPath != null)
+        {
+            <span>Previous image:</span>
+            <div class="display-field col-md-12">
+                <div class="display-field col-md-6">
+                    <a href="@Model.previousQualityCheck.image.jpgPath"><img src="@Model.previousQualityCheck.image.jpgPath" /></a>
+                </div>
+                <div class="display-field col-md-6">
+                    <a href="@Model.previousQualityCheck.image.binPath"><img src="@Model.previousQualityCheck.image.binPath" /></a>
+                </div>
+            </div>
+        }
         <h3>
             @Model.image.filename.Substring(0, 6) @Model.image.filename.Substring(14, 4) @Model.image.filename.Substring(19, 3)
             @Model.image.filename.Substring(29, 2)/@Model.image.filename.Substring(27, 2)/@Model.image.filename.Substring(23, 4)
@@ -100,19 +112,19 @@
         <div class="display-field col-md-12">
             <label>Status</label>
             @*@{
-                switch ((int)Model.qualityCheck.status)
-                {
-                    case 0:*@
+            switch ((int)Model.qualityCheck.status)
+            {
+                case 0:*@
             <text><h3 id="unverified" style="color:grey;">Unverified</h3></text>
             @*break;
-                case 1:*@
+            case 1:*@
             <text><h3 id="pass" class="text-highlight">Pass</h3></text>
             @*break;
-                case 2:*@
+            case 2:*@
             <text><h3 id="fail" class="text-additional">Fail</h3></text>
             @*break;
-                    }
-                }*@<p>
+                }
+            }*@<p>
                 @Html.ActionLink("Back To List", "UploadSetQualityChecks", new { setID = Model.uploadSetID }) &nbsp;|&nbsp;
                 @Html.ActionLink("Previous", "EditQualityCheck", new { checkID = Model.qualityCheck.ID - 1, setID = Model.uploadSetID })
 
