--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,6 +30,9 @@
     <a href="@Url.Action("Overview")" class="button rounded fill-highlight">
         Overview Uploads
     </a>
+    <a href="@Url.Action("OverviewPaged")" class="button rounded fill-highlight">
+        Paged Overview Uploads
+    </a>
 </div>
 <div class="col-md-4 col-md-offset-1">
     <a href="@Url.Action("CameraSetups")" class="button rounded fill-highlight">
