--- a/Views/Home/UploadSetQualityChecks.cshtml
+++ b/Views/Home/UploadSetQualityChecks.cshtml
@@ -13,6 +13,7 @@
         </th>
         <th>Date Modified</th>
         <th>User</th>
+        <th>LAI</th>
         <th>
             Status
         </th>
@@ -22,45 +23,48 @@
 
     @foreach (var item in Model.qualityChecks)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.filename)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dateModified)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.userName)
-            </td>
-            <td>
-                @if ((item.status) == UploadWebapp.Models.QCstatus.created)
-                {
-                    <span style="color:gray">
-                        @Html.DisplayFor(modelItem => item.status)
-                    </span>
-                }
-                else
-                {
-                    if (item.status == UploadWebapp.Models.QCstatus.pass)
-                    {
-                        <span class="text-highlight">
-                            @Html.DisplayFor(modelItem => item.status)
-                        </span>
-                    }
-                    else
-                    {
-                        <span class="text-additional">
-                            @Html.DisplayFor(modelItem => item.status)
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.filename)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.dateModified)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.userName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LAI)
+    </td>
+    <td>
+        @if ((item.status) == UploadWebapp.Models.QCstatus.created)
+        {
+            <span style="color:gray">
+                @Html.DisplayFor(modelItem => item.status)
+            </span>
+        }
+        else
+        {
+            if (item.status == UploadWebapp.Models.QCstatus.pass)
+            {
+                <span class="text-highlight">
+                    @Html.DisplayFor(modelItem => item.status)
+                </span>
+            }
+            else
+            {
+                <span class="text-additional">
+                    @Html.DisplayFor(modelItem => item.status)
 
-                        </span>
-                    }
-                }
-            </td>
-            <td style="text-align:center">
+                </span>
+            }
+        }
+    </td>
+    <td style="text-align:center">
 
-                @Html.ActionLink("Edit", "EditQualityCheck", new { checkID = item.ID, setID = item.uploadSetID })
-            </td>
-        </tr>
+        @Html.ActionLink("Edit", "EditQualityCheck", new { checkID = item.ID, setID = item.uploadSetID })
+    </td>
+</tr>
     }
 
 </table>
